feat: enhance markdown preview and logging capabilities
- Added live markdown preview tab in prompt create/edit dialogs.
- Implemented split view for raw body and rendered markdown in prompt details.
- Updated AppLogger to use SLF4J with Logback for improved logging format and configurability.
- Enhanced markdown rendering to support various markdown constructs consistently.
- Updated version to 0.4.3.